# template-laravel/routes/web.php
@@ -59,17 +59,6 @@ Route::get('usermanager',function(){
 });
 
 
-// Cards
-Route::get('cards', 'CardController@list');
-Route::get('cards/{id}', 'CardController@show');
-
-// API
-Route::put('api/cards', 'CardController@create');
-Route::delete('api/cards/{card_id}', 'CardController@delete');
-Route::put('api/cards/{card_id}/', 'ItemController@create');
-Route::post('api/item/{id}', 'ItemController@update');
-Route::delete('api/item/{id}', 'ItemController@delete');
-
 //---------------------------------------------------
 
 // Authentication
@@ -79,32 +68,25 @@ Route::get('/logout', 'Auth\LoginController@logout')->name('logout');
 Route::get('register', 'Auth\RegisterController@showRegistrationForm');
 Route::post('register', 'Auth\RegisterController@register')->name('register');
 
-Route::get('/ownprofile/{user_id}', 'UserController@show')->name('profile');
-//Route::get('/ownprofile/{user_id}', 'Auth\OwnProfileController@editProfile');
-//Route::get('/ownprofile/{user_id}', 'Auth\OwnProfileController@createPost');
-//Route::get('/ownprofile/{user_id}', 'Auth\OwnProfileController@switchPosts');
+// Profile
+Route::get('/user/{user_id}', 'UserController@show')->name('profile');
 
-Route::get('/otherprofile/{user_id}', 'Auth\OtherProfileController@follow');
-Route::get('/otherprofile/{user_id}', 'Auth\OtherProfileController@switchPosts');
-
-// Search
-Route::get('/search', 'SearchController@search_results')->name('search');
-
-Route::get('/newpost', 'PostController@showNewPost');
-Route::post('/newpost', 'PostController@storeNewPost') -> name('create_new_post');
- 
+//Feed
 Route::get('authuserfeed', 'FeedController@show')->name('authuserfeed');
 Route::get('homepage','FeedController@show')->name('homepage');
-
-//---------------------------------------------------
-
 
 // Post 
 Route::get('/posts/{id}', 'PostController@show')->where(['id' => '[0-9]+']);
 Route::delete('/post/{post_id}', 'PostController@delete');
 Route::get('/post/{post_id}/edit', 'PostController@showEdit');
 Route::put('/post/{post_id}', 'PostController@edit')->name('editpost');
-Route::post('/post/{post_id}/vote', 'PostController@vote');
+Route::get('/newpost', 'PostController@showNewPost');
+Route::post('/newpost', 'PostController@storeNewPost') -> name('create_new_post');
+ 
+
+//---------------------------------------------------
+
+/*Route::post('/post/{post_id}/vote', 'PostController@vote');
 Route::delete('/post/{post_id}/vote', 'PostController@remove_vote');
 Route::post('/post/{post_id}/report', 'PostController@report');
 Route::post('/post/{post_id}/save', 'PostController@save');
@@ -115,3 +97,5 @@ Route::post('/reply', 'CommentController@replyComment');
 Route::delete('/comment/{comment_id}', 'CommentController@deleteComment');
 Route::put('/comment/{comment_id}', 'CommentController@editComment');
 
+// Search
+Route::get('/search', 'SearchController@search_results')->name('search');*/
